Fix merge issues with DTSCCI-2559 Remove GaForLips feature toggle